--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,6 +3,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
 EditorStartupMap=/Game/NevskiyS/Main/EmptyLevel.EmptyLevel
+GlobalDefaultGameMode=/Game/NevskiyS/Main/MainGM.MainGM_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
