--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Engine/Maps/Templates/Template_Default.Template_Default
-EditorStartupMap=/Game/NevskiyS/Main/EmptyLevel.EmptyLevel
+GameDefaultMap=/Game/NevskiyS/Levels/Level001.Level001
+EditorStartupMap=/Game/NevskiyS/Levels/Level001.Level001
 GlobalDefaultGameMode=/Game/NevskiyS/Main/MainGM.MainGM_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
